# APS-failure-classification

./: .env.example  .flake8  .gitignore  AWS_DEPLOYMENT.md  Dockerfile  INTERVIEW_PREP.md  MLFLOW_DVC_SETUP.md  PROJECT_AUDIT.md  README.md  dvc.yaml  main.py  params.yaml  pyproject.toml  requirements.txt
.dvc/: config  config.local
.github/workflows/: main.yml
sensor/: exception.py  logger.py
sensor/cloud_storage/: s3_syncer.py
sensor/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_pusher.py  model_trainer.py
sensor/configuration/: mongo_db_connection.py
sensor/constants/: database.py  env_variable.py  s3_bucket.py
sensor/constants/prediction_pipeline/: __init__.py
sensor/constants/training_pipeline/: __init__.py
sensor/data_access/: sensor_data.py
sensor/entity/: artifact_entity.py  config_entity.py
sensor/ml/metric/: classification_metric.py
sensor/ml/model/: estimator.py
sensor/pipeline/: training_pipeline.py
sensor/utils/: main_utils.py
tests/: conftest.py  test_classification_metric.py  test_data_validation.py  test_estimator.py  test_model_trainer.py
