[project]
name = "sensor-fault-detection"
version = "0.0.1"
description = "APS Failure Classification — End-to-end ML pipeline for Scania truck fault detection"
authors = [
    { name = "Tiyyagura Chandra Reddy", email = "chandra.tiyyagura@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "dnspython==2.7.0",
    "pymongo==4.11.1",
    "certifi==2025.1.31",
    "python-dotenv==1.0.1",
    "pandas==2.2.3",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "PyYAML==6.0.2",
    "dill==0.3.9",
    "imbalanced-learn==0.13.0",
    "xgboost==2.1.4",
    "fastapi==0.115.8",
    "httptools==0.6.4",
    "mypy-boto3-s3==1.36.21",
    "types-s3transfer==0.11.2",
    "uvicorn==0.34.0",
    "starlette==0.45.3",
    "python-multipart==0.0.20",
    "streamlit==1.42.2",
    "requests==2.32.4",
    "pandas-stubs~=2.2.3",
    "scipy-stubs~=1.15.2",
    # MLflow + DagsHub
    "mlflow==2.16.2",
    "dagshub==0.3.25",
    "matplotlib==3.9.2",
    # DVC
    "dvc==3.50.1",
    "dvc-s3==3.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sensor"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "flake8>=7.0",
    "httpx>=0.23,<0.24",        # required by FastAPI TestClient
]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["sensor"]
omit = ["sensor/constants/*", "sensor/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 40
